--- a/src/style.css
+++ b/src/style.css
@@ -17,10 +17,12 @@ body {
 }
 
 canvas {
+  cursor: none;
   image-rendering: pixelated;
 }
 
 #imgui-canvas {
+  cursor: default;
   position: absolute;
   top: 0;
   left: 0;
